@@ -1,3 +1,14 @@
+2003-02-23  Thomas Flynn  <tflynn@users.sourceforge.net>
+
+        * src/openvrml/OpenVRML/browser.h,
+          src/openvrml/OpenVRML/browser.cpp,
+          src/openvrml/OpenVRML/script.cpp,
+          src/openvrml/OpenVRML/ScriptJDK.cpp: Add support for
+          Browser.getCurrentSpeed.
+
+        * src/openvrml/OpenVRML/ScriptJDK.cpp: Add additional comments.
+          Make use of addElement method.
+
 2003-02-17  Braden McDaniel  <braden@endoframe.com>
 
         * src/openvrml/OpenVRML/browser.cpp,
